--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hacker Search Engine</title>
+    <title>Bounty Search Engine</title>
     <style>
         body {
             font-family: 'Courier New', Courier, monospace;
@@ -171,7 +171,7 @@
 
 <body>
     <div class="container">
-        <h1>Hacker Search Engine</h1>
+        <h1>Bounty Search Engine</h1>
         <p class="animated-text">Find what you're looking for in the matrix...</p>
         <!-- Google Custom Search Engine Script -->
         <script async src="https://cse.google.com/cse.js?cx=759aed2f7b4be4b83"></script>
@@ -199,7 +199,7 @@
 
     <!-- Footer -->
     <div class="footer">
-        &copy; 2024 Hacker Search Engine | Stay Anonymous
+        &copy; 2024 Bounty Search Engine | Stay Anonymous
     </div>
 
     <script>
