--- a/gits.html
+++ b/gits.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Search Engine</title>
+    <title>Bounty Search Engine</title>
     <style>
         /* Same CSS as in index.html */
         body { font-family: 'Courier New', Courier, monospace; background-color: #0f0f0f; color: #00ff00; margin: 0; padding: 0; text-align: center; overflow-x: hidden; }
@@ -35,14 +35,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>GitHub Search Engine</h1>
+        <h1>Bounty Search Engine</h1>
         <p class="animated-text">Dig into repositories...</p>
         <p>Be cautious, knowledge is power!</p>
     </div>
 
     <!-- GitHub Dorks Section -->
     <div class="dorks-container">
-        <h2>GitHub Dorks for Bug Bounty</h2>
+        <h2>Bounty Dorks for Bug Bounty</h2>
         <p>
             <a href="https://github.com/Vulnpire/bounty-search-engine" target="_blank">GitHub Repo</a><br><br>
         </p>
@@ -60,7 +60,7 @@
 
     <!-- Footer -->
     <div class="footer">
-        &copy; 2024 GitHub Search Engine | Stay Anonymous
+        &copy; 2024 Bounty Search Engine | Stay Anonymous
     </div>
 
     <script>
