--- a/gits.html
+++ b/gits.html
@@ -42,7 +42,7 @@
 
     <!-- GitHub Dorks Section -->
     <div class="dorks-container">
-        <h2>Bounty Dorks for Bug Bounty</h2>
+        <h2>GitHub Dorks for Bug Bounty</h2>
         <p>
             <a href="https://github.com/Vulnpire/bounty-search-engine" target="_blank">GitHub Repo</a><br><br>
         </p>
